change role to user_role
