# db/schema.rb
@@ -27,7 +27,7 @@ ActiveRecord::Schema[7.0].define(version: 2022_11_30_221221) do
   create_table "users", force: :cascade do |t|
     t.string "name"
     t.string "email"
-    t.integer "role"
+    t.integer "user_role"
     t.datetime "created_at", null: false
     t.datetime "updated_at", null: false
   end
